--- a/UniversidadDeLaPuntaGrupo25/nbproject/private/private.properties
+++ b/UniversidadDeLaPuntaGrupo25/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Jon\\Desktop\\ProyectoTransversal\\la25-ProyectoArgPrograma\\mariadb-java-client-3.2.0.jar
 user.properties.file=C:\\Users\\Jon\\AppData\\Roaming\\NetBeans\\18\\build.properties
