--- a/UniversidadDeLaPuntaGrupo25/nbproject/project.properties
+++ b/UniversidadDeLaPuntaGrupo25/nbproject/project.properties
@@ -32,10 +32,12 @@ dist.jar=${dist.dir}/UniversidadDeLaPuntaGrupo25.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-3.2.0.jar=../../../../Desktop/Driver/mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\Jon\\Desktop\\JDBC\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
