--- a/UniversidadDeLaPuntaGrupo25/nbproject/project.properties
+++ b/UniversidadDeLaPuntaGrupo25/nbproject/project.properties
@@ -31,13 +31,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversidadDeLaPuntaGrupo25.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Ezequiel\\Downloads\\java\\Calendario\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=../../../../Desktop/Driver/mariadb-java-client-3.2.0.jar
 file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\Jon\\Desktop\\JDBC\\mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-2=C:\\Users\\Ezequiel\\Desktop\\Driver\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar-1}
+    ${file.reference.mariadb-java-client-3.2.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
